kubernetes/goal-006-product-contract/product-contract.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: banklab-accounts
  namespace: tenant-accounts
  annotations:
    konghq.com/plugins: banklab-key-auth,banklab-acl,banklab-rate-limit,banklab-correlation-id,goal006-product-contract-header
    platform.soyspray.io/runbook: docs/runbooks/goal-006-product-contract-rollback.md
    platform.soyspray.io/docs-owner: retail-accounts
    platform.soyspray.io/product-contract-file: platform/self-service/api-products/accounts-self-service-health-v1.yaml
    platform.soyspray.io/deck-state-file: platform/kong/deck/goal006/accounts-self-service-product.yaml
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: synthetic-api
    banklab.konghq.com/environment: lab
    banklab.konghq.com/data-classification: synthetic
    banklab.konghq.com/lifecycle: sandbox
    banklab.konghq.com/auth-profile: kong-oss-goal004-auth
    banklab.konghq.com/auth-state: authenticated-required
    banklab.konghq.com/authorization-profile: acl-goal004-api-groups
    banklab.konghq.com/rate-limit-profile: goal004-internal-redis-3rps
    banklab.konghq.com/goal: goal-004
    banklab.konghq.com/api-domain: accounts
    banklab.konghq.com/owner: tenant-accounts-team
    banklab.konghq.com/exposure: internal
    platform.soyspray.io/managed-by: gitops
    platform.soyspray.io/goal: goal-006
    platform.soyspray.io/tenant: retail-accounts
    platform.soyspray.io/api-id: accounts
    platform.soyspray.io/logical-workspace: retail-banking
    platform.soyspray.io/exposure: internal
    platform.soyspray.io/data-classification: confidential
    platform.soyspray.io/change-class: standard
    platform.soyspray.io/product-id: accounts-self-service-health-v1
spec:
  parentRefs:
    - name: kong-internal
      namespace: platform-kong
      sectionName: http
  hostnames:
    - api.internal.banklab.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /accounts/v1
      backendRefs:
        - name: banklab-accounts-api
          port: 80
